--- a/L4e/index.html
+++ b/L4e/index.html
@@ -3,25 +3,70 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Shop uu</title>
+	<title>Shop</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="header"></div>
-	   <div class="logo">
-	   	   <a href="#"></a>
-	   	       <img src="" alt="">
+    <div class="container">
+	<div class="header">
+		<div class="logo">
+	   	   <a href="#">
+	   	       <img src="images/depositphotos_11012455-stock-photo-cool-fish-wearing-sunglasses.jpg" alt="">
 	   	           Shop
-	   	    </a>
+	   	   </a>
        </div>
        <div class="nav">
        	    <a href="#">Link 1</a>
        	    <a href="#">Link 2</a>
        	    <a href="#">Link 3</a>
        	    <a href="#">Link 4</a>
-       	    <a href="#">Link 5</a>
+	   </div>
+
+	   <div class="actionBar">
+	     <a href=""><img src="images/lypa.png" alt=""></a>
+	     <a href=""><img src="images/profil.png" alt=""></a>
+	     <a href=""><img src="images/images1.png" alt=""></a>   	
 	   </div>
     </div>
+
+    <div class="hero">
+    	<h1>World of fish glasses</h1>
+    	<h2>Buy glasses for your favorite aquatic pets</h2>
+    	<a href="#" class="heroButton">Shop now
+    	</a>
+    </div>
+
+    <div class="categories">
+    	<a href="">
+    		<div class="category">
+    			<h3>Category 1</h3>
+    		</div>
+    	</a>
+    	<a href="">
+    		<div class="category">
+    			<h3>Category 2</h3>
+    		</div>
+    	</a>
+    	<a href="">
+    		<div class="category">
+    			<h3>Category 3</h3>
+    		</div>
+    	</a>
+    	<a href="">
+    		<div class="category">
+    			<h3>Category 4</h3>
+    		</div>
+    	</a>
+    	<a href="">
+    		<div class="category">
+    			<h3>Category 5</h3>
+    		</div>
+    	</a>
+    </div>
+
+
+	</div>
+	   
 
 </body>
 </html>
